--- a/src/index.css
+++ b/src/index.css
@@ -168,3 +168,40 @@ button.reject {
 button:hover {
   opacity: 0.8;
 }
+
+.table {
+  width: 90%;
+  margin: auto;
+  border-collapse: collapse;
+}
+.table th, .table td {
+  padding: 1em;
+  text-align: left;
+}
+.table th {
+  background: #222;
+  color: #fff;
+  font-weight: bold;
+}
+.table tr {
+  border-bottom: 1px solid #333;
+}
+.table tr:nth-child(even) {
+  background-color: #444;
+}
+.table img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+.reject-btn {
+  background: red;
+  color: white;
+  border: none;
+  padding: 0.3em 0.6em;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.reject-btn:hover {
+  opacity: 0.8;
+}
